--- a/contents/config.yml
+++ b/contents/config.yml
@@ -1,5 +1,5 @@
-title: Sen Li's Homepage
-page-top-title: Sen Li
-top-section-bg-text: Computer Science
-home-subtitle: Yuanhao-Z&ensp;|&ensp;李森
-copyright-text: '&copy; Sen Li 2023-2024. All Rights Reserved.'
+title: Yuanhao Zhong's Homepage
+page-top-title: Yuanhao Zhong
+top-section-bg-text: Electronic Information
+home-subtitle: Yuanhao Zhong&ISTJ;|&ISTJ;钟元昊
+copyright-text: '&copy; Yuanhao Zhong 2024-2025. All Rights Reserved.'
