--- a/contents/config.yml
+++ b/contents/config.yml
@@ -1,5 +1,5 @@
 title: Yuanhao Zhong's Homepage
 page-top-title: Yuanhao Zhong
 top-section-bg-text: Electronic Information
-home-subtitle: Yuanhao Zhong&ISTJ;|&ISTJ;钟元昊
+home-subtitle: Yuanhao Zhong | 钟元昊
 copyright-text: '&copy; Yuanhao Zhong 2024-2025. All Rights Reserved.'
